force-app/main/default/objects/Modify_Records__c/Modify_Records__c.object-meta.xml
<CustomObject>
    <description>Service Cloud : Entitlement Modification Request</description>
    <label>Modify Record</label>
    <nameField>
        <displayFormat>MR-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Modify Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>