force-app/main/default/objects/Modify_Records__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Modify Records</relationshipLabel>
    <relationshipName>Modify_Records</relationshipName>
    <type>Lookup</type>
</CustomField>