force-app/main/default/objects/Modify_Records__c/fields/Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Modify Records</relationshipLabel>
    <relationshipName>Modify_Records</relationshipName>
    <type>Lookup</type>
</CustomField>