force-app/main/default/objects/Modify_Records__c/fields/Original_Details__c.field-meta.xml
<CustomField>
    <fullName>Original_Details__c</fullName>
    <label>Original Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>