force-app/main/default/objects/Modify_Records__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Entitlement</fullName>
            </value>
            <value>
                <fullName>License Server</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>